--- a/Ip project/project-work/home.html
+++ b/Ip project/project-work/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Sales | Ip Project</title>
-    <link rel="stylesheet" href="carSales.css">         
+    <link rel="stylesheet" href="home.css">         
                 
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
