--- a/Ip project/project-work/inventory.html
+++ b/Ip project/project-work/inventory.html
@@ -11,7 +11,7 @@
     <nav>
         <h2>TAMERS</h2>
         <ul>
-            <li><a href="carSales.html">HOME</a></li>
+            <li><a href="home.html">HOME</a></li>
             <li><a href="#">INVENTORY</a></li>
             <li><a href="#">FEATURED CARS</a></li>
             <li><a href="#">CONTACT US</a></li>
