--- a/Ip project/Car-Sales/pages/detail.htm
+++ b/Ip project/Car-Sales/pages/detail.htm
@@ -22,10 +22,10 @@
     <nav>
         <h2>TAMERS</h2>
         <ul>
-            <li><a href="carSale.html">HOME</a></li>
-            <li><a href="inventory.html">INVENTORY</a></li>
-            <li><a href="carSales.html/#feature">FEATURED CARS</a></li>
-            <li><a href="#">CONTACT US</a></li>
+            <li><a href="./carSale.html">HOME</a></li>
+            <li><a href="./inventory.html">INVENTORY</a></li>
+            <li><a href="./carSales.html/#feature">FEATURED CARS</a></li>
+            <li><a href="./contactus.html">CONTACT US</a></li>
         </ul>
     </nav>
 
