--- a/Ip project/Car-Sales/pages/contactus.html
+++ b/Ip project/Car-Sales/pages/contactus.html
@@ -21,10 +21,10 @@
     <nav>
         <h2>TAMERS</h2>
         <ul>
-            <li><a href="../pages/carSales.html">HOME</a></li>
-            <li><a href="../pages/invent.html">INVENTORY</a></li>
+            <li><a href="./carSales.html">HOME</a></li>
+            <li><a href="./inventory.html">INVENTORY</a></li>
             <li><a href="carSales.html/#feature">FEATURED CARS</a></li>
-            <li><a href="../pages/contactus.html">CONTACT US</a></li>
+            <li><a href="#">CONTACT US</a></li>
         </ul>
     </nav>
     <hr>
