new file:   .vscode/settings.json 	modified:   Ip project/Car-Sales/asset/carSales.css 	modified:   Ip project/Car-Sales/asset/inventory.css 	modified:   Ip project/Car-Sales/pages/contactus.html 	modified:   Ip project/Car-Sales/pages/inventory.html

--- a/Ip project/Car-Sales/pages/contactus.html
+++ b/Ip project/Car-Sales/pages/contactus.html
@@ -23,7 +23,7 @@
         <ul>
             <li><a href="./carSales.html">HOME</a></li>
             <li><a href="./inventory.html">INVENTORY</a></li>
-            <li><a href="carSales.html/#feature">FEATURED CARS</a></li>
+            <li><a href="./carSales.html/#feature">FEATURED CARS</a></li>
             <li><a href="#">CONTACT US</a></li>
         </ul>
     </nav>
