--- a/Ip project/Car-Sales/pages/carSales.html
+++ b/Ip project/Car-Sales/pages/carSales.html
@@ -49,7 +49,7 @@
             </select>
             <form id="make" action="">
                 <fieldset>
-                    <input type="text" id="search-part" class="search-part" placeholder="Search">
+                    <input type="text" id="search-part" class="search-part" placeholder="Model">    
                 </fieldset>
             </form>
             <button type="submit"><i class='bx bx-search'></i></button>
