modified:   Ip project/Car-Sales/asset/contactus.css 	modified:   Ip project/Car-Sales/pages/contactus.html

--- a/Ip project/Car-Sales/pages/contactus.html
+++ b/Ip project/Car-Sales/pages/contactus.html
@@ -14,7 +14,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Genos:ital,wght@1,500&family=Salsa&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
- 
+
+        <!--box icons-->
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
             <!--top of the website-->
@@ -68,7 +70,6 @@
             </form>
         </div>
 
-        <!--footer-->
         <footer>
             <h1>Tamers</h1>
             <p>Addis Ababa, Ethiopia</p>
