modified:   Ip project/Car-Sales/asset/contactus.css 	modified:   Ip project/Car-Sales/pages/carSales.html

--- a/Ip project/Car-Sales/pages/carSales.html
+++ b/Ip project/Car-Sales/pages/carSales.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <br>
-    <h2 class="FEATURED" id="feature">Accent Cars</h2>
+    <h2 class="FEATURED" id="feature">Featured Cars</h2>
 
     <div class="car-list">
         <!--car contents per sub container-->
