--- a/Ip project/Car-Sales/pages/detail_2.htm
+++ b/Ip project/Car-Sales/pages/detail_2.htm
@@ -36,11 +36,11 @@
     <div class="car-details">
         <div class="img-container">
             <div class="slide">
-                <img src="https://www.wardsauto.com/sites/wardsauto.com/files/Cadillac%20Celestiq%20front%201.4.jpg" class="cascade">
-                <img src="https://media.architecturaldigest.com/photos/5e4193cee71de50008ce31dd/master/w_1600%2Cc_limit/2021-Cadillac-Escalade-069.jpg" class="cascade">
-                <img src="https://i.pinimg.com/originals/a4/7d/58/a47d583278f83727b87492d1b7c07658.jpg" class="cascade">
-                <img src="https://images.drive.com.au/driveau/image/upload/c_fill,f_auto,g_auto,h_1080,q_auto:good,w_1920/cms/uploads/lizo3av3zahpbenss8pq" class="cascade">
-                <img src="https://www.shutterstock.com/image-photo/fishers-circa-may-2023-cadillac-600nw-2307008497.jpg" class="cascade">
+                <img src="https://th.bing.com/th/id/R.bdc53f193c4876a40019126cbe555bb9?rik=lgFR%2fnWZhwhchQ&pid=ImgRaw&r=0" class="cascade">
+                <img src="https://th.bing.com/th/id/OIP.3m4MiGFlkXg6JtfKi9qqTgHaFj?pid=ImgDet&w=190&h=142&c=7" class="cascade">
+                <img src="https://th.bing.com/th/id/R.afb012e272feaa2f26c39fa0d94ec212?rik=6b3JPl3ykgxgjQ&riu=http%3a%2f%2f3.bp.blogspot.com%2f-oP8DS981mQY%2fUPVJv4lUFqI%2fAAAAAAAAAgQ%2fIX4KbU0SobI%2fs1600%2fAudi%2bR8%2bBack%2bView.jpg&ehk=46nFVpNOUZ%2brrQEazdYgMwKJZVA25X7LTrdtgb3FL%2bY%3d&risl=&pid=ImgRaw&r=0" class="cascade">
+                <img src="https://th.bing.com/th/id/OIP.w_XyoPplQmltkoJbgFU5sAHaE9?w=252&h=180&c=7&r=0&o=5&pid=1.7" class="cascade">
+                <img src="https://th.bing.com/th/id/R.07322e1a2c5cf5d3a7aa7945a2d00247?rik=DdI8ObY1Tu5cmg&pid=ImgRaw&r=0" class="cascade">
             </div>
         </div>
         
