--- a/Ip project/Car-Sales/pages/detail_4.htm
+++ b/Ip project/Car-Sales/pages/detail_4.htm
@@ -36,11 +36,11 @@
     <div class="car-details">
         <div class="img-container">
             <div class="slide">
-                <img src="https://www.wardsauto.com/sites/wardsauto.com/files/Cadillac%20Celestiq%20front%201.4.jpg" class="cascade">
-                <img src="https://media.architecturaldigest.com/photos/5e4193cee71de50008ce31dd/master/w_1600%2Cc_limit/2021-Cadillac-Escalade-069.jpg" class="cascade">
-                <img src="https://i.pinimg.com/originals/a4/7d/58/a47d583278f83727b87492d1b7c07658.jpg" class="cascade">
-                <img src="https://images.drive.com.au/driveau/image/upload/c_fill,f_auto,g_auto,h_1080,q_auto:good,w_1920/cms/uploads/lizo3av3zahpbenss8pq" class="cascade">
-                <img src="https://www.shutterstock.com/image-photo/fishers-circa-may-2023-cadillac-600nw-2307008497.jpg" class="cascade">
+                <img src="https://th.bing.com/th/id/OIP.HQX0au8ev9HH1k2RwGq7uAHaEK?rs=1&pid=ImgDetMain" class="cascade">
+                <img src="https://www.wallpapersshare.com/img/big/red-bentley-car-inside-view.jpg" class="cascade">
+                <img src="https://th.bing.com/th/id/R.3d50c2dfb32823c78cd3580704b03a3a?rik=NqJHE0bCydYusQ&riu=http%3a%2f%2fcarhumor.net%2fwp-content%2fuploads%2f2011%2f06%2fcar-wallpaper-0138.jpg&ehk=NByUAXQYqlRt4gTVWdned2EdYI4IR%2f178gciF%2bpEcrk%3d&risl=&pid=ImgRaw&r=0" class="cascade">
+                <img src="https://th.bing.com/th/id/R.ff1fa8aed77289a9dc08020f7f534bd3?rik=5RuGh5dq0yjskQ&pid=ImgRaw&r=0" class="cascade">
+                <img src="https://th.bing.com/th/id/OIP.9-WmMXPTCJKa_wxf-KU21wHaE8?w=3000&h=2000&rs=1&pid=ImgDetMain" class="cascade">
             </div>
         </div>
         
