modified:   Ip project/Car-Sales/pages/upload.htm 	new file:   Ip project/Car-Sales/scripts/upload.js

--- a/Ip project/Car-Sales/pages/upload.htm
+++ b/Ip project/Car-Sales/pages/upload.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Car Information</title>
-    <link rel="stylesheet" href="upload.css">
+    <link rel="stylesheet" href="/Ip project/Car-Sales/asset/upload.css">
 
     <!--google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -87,6 +87,6 @@
         <label for="foot">Tamers | &copy; Copyright 2022 | Addis Ababa | All Rights Reserve | Website Developed by <span>Tamers</span></label>
     </footer>
 
-    <script src="upload.js"></script>
+    <script src="/Ip project/Car-Sales/scripts/upload.js"></script>
 </body>
 </html>
