modified:   Ip project/Car-Sales/asset/carSales.css 	modified:   Ip project/Car-Sales/pages/carSales.html 	modified:   Ip project/Car-Sales/pages/contactus.html 	modified:   Ip project/Car-Sales/pages/detail.htm 	modified:   Ip project/Car-Sales/pages/detail_2.htm 	modified:   Ip project/Car-Sales/pages/detail_3.htm 	modified:   Ip project/Car-Sales/pages/detail_4.htm 	modified:   Ip project/Car-Sales/pages/inventory.html 	modified:   Ip project/Car-Sales/pages/upload.htm 	modified:   Ip project/Car-Sales/scripts/upload.js

--- a/Ip project/Car-Sales/pages/carSales.html
+++ b/Ip project/Car-Sales/pages/carSales.html
@@ -31,6 +31,7 @@
                 <li><a href="#">HOME</a></li>
                 <li><a href="./inventory.html">INVENTORY</a></li>
                 <li><a href="#feature">FEATURED CARS</a></li>
+                <li><a href="../pages/upload.htm">UPLOAD</a></li>
                 <li><a href="./contactus.html">CONTACT US</a></li>
             </ul>
         </nav>
