--- a/Ip project/Car-Sales/pages/inventory.html
+++ b/Ip project/Car-Sales/pages/inventory.html
@@ -24,6 +24,7 @@
             <li><a href="../pages/carSales.html">HOME</a></li>
             <li><a href="inventory.html">INVENTORY</a></li>
             <li><a href="../pages/carSales.html#feature">FEATURED CARS</a></li>
+            <li><a href="../pages/upload.htm">UPLOAD</a></li>
             <li><a href="../pages/contactus.html">CONTACT US</a></li>
         </ul>
     </nav>
