--- a/Ip project/Car-Sales/pages/upload.htm
+++ b/Ip project/Car-Sales/pages/upload.htm
@@ -26,6 +26,7 @@
             <li><a href="#">HOME</a></li>
             <li><a href="inventory.html">INVENTORY</a></li>
             <li><a href="#feature">FEATURED CARS</a></li>
+            <li><a href="">UPLOAD</a></li>
             <li><a href="#">CONTACT US</a></li>
         </ul>
     </nav>
