modified:   Ip project/Car-Sales/asset/detail.css 	modified:   Ip project/Car-Sales/pages/detail.htm 	modified:   Ip project/Car-Sales/pages/detail_2.htm 	modified:   Ip project/Car-Sales/pages/detail_3.htm 	modified:   Ip project/Car-Sales/pages/detail_4.htm

--- a/Ip project/Car-Sales/pages/detail_4.htm
+++ b/Ip project/Car-Sales/pages/detail_4.htm
@@ -20,9 +20,15 @@
     
 </head>
 <body>
+    <!-- the bar icon -->
+    <input type="checkbox" id="check">
+    <label for="check" class="checkbtn">
+        <i class='bx bx-menu'></i>
+    </label>
+
 
     <nav>
-        <h2>TAMERS</h2>
+        <label id="h2">TAMERS</label>
         <ul>
             <li><a href="carSale.html">HOME</a></li>
             <li><a href="inventory.html">INVENTORY</a></li>
