Minor change in upload

--- a/Ip project/Car-Sales/pages/detail.htm
+++ b/Ip project/Car-Sales/pages/detail.htm
@@ -32,7 +32,7 @@
             <li><a href="./carSale.html">HOME</a></li>
             <li><a href="./inventory.html">INVENTORY</a></li>
             <li><a href="./carSales.html/#feature">FEATURED CARS</a></li>
-            <li><a href="../pages/upload.htm">UPLOAD</a></li>
+            <li><a href="../pages/upload.html">UPLOAD</a></li>
             <li><a href="./contactus.html">CONTACT US</a></li>
         </ul>
     </nav>
