modified:   .vscode/settings.json 	modified:   Ip project/Car-Sales/asset/detail.css 	modified:   Ip project/Car-Sales/asset/inventory.css 	modified:   Ip project/Car-Sales/asset/upload.css 	modified:   Ip project/Car-Sales/pages/detail_4.htm 	modified:   Ip project/Car-Sales/pages/inventory.html 	modified:   Ip project/Car-Sales/pages/upload.html 	modified:   Ip project/Car-Sales/scripts/upload.js

--- a/Ip project/Car-Sales/pages/inventory.html
+++ b/Ip project/Car-Sales/pages/inventory.html
@@ -16,10 +16,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Genos:ital,wght@1,500&family=Salsa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poor+Story&family=Protest+Revolution&family=Single+Day&display=swap" rel="stylesheet">
 
+    <!--box icons-->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <!-- the bar icon -->
+    <input type="checkbox" id="check">
+    <label for="check" class="checkbtn">
+        <i class='bx bx-menu'></i>
+    </label>
+
     <nav>
-        <h2>TAMERS</h2>
+        <label id="h2">TAMERS</label>
         <ul>
             <li><a href="../pages/carSales.html">HOME</a></li>
             <li><a href="inventory.html">INVENTORY</a></li>
