--- a/Ip project/Car-Sales/pages/detail_4.htm
+++ b/Ip project/Car-Sales/pages/detail_4.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesla | Tamers</title>
-    <link rel="stylesheet" href="../asset/">
+    <link rel="stylesheet" href="../asset/detail.css">
 
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
