--- a/Ip project/Car-Sales/pages/carSales.html
+++ b/Ip project/Car-Sales/pages/carSales.html
@@ -25,8 +25,14 @@
             <source src="../video/test.mp4" type="video/mp4">
         </video>
 
+         <!-- the bar icon -->
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class='bx bx-menu'></i>
+        </label>
+
         <nav>
-            <h2>TAMERS</h2>
+            <label id="h2">TAMERS</label>
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="./inventory.html">INVENTORY</a></li>
