Update on home page and minor fix for upload html

--- a/Ip project/Car-Sales/pages/carSales.html
+++ b/Ip project/Car-Sales/pages/carSales.html
@@ -25,13 +25,13 @@
             <source src="../video/test.mp4" type="video/mp4">
         </video>
 
-         <!-- the bar icon -->
+            <!-- the bar icon -->
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
             <i class='bx bx-menu'></i>
         </label>
 
-        <nav>
+        <nav id="menu">
             <label id="h2">TAMERS</label>
             <ul>
                 <li><a href="#">HOME</a></li>
