--- a/Ip project/Car-Sales/pages/upload.html
+++ b/Ip project/Car-Sales/pages/upload.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Car Information</title>
-    <link rel="stylesheet" href="/Ip project/Car-Sales/asset/upload.css">
+    <link rel="stylesheet" href="../asset/upload.css">
 
     <!--google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -92,7 +92,6 @@
 
 
         </div>
-
 
         <hr>
         <label for="foot">Tamers | &copy; Copyright 2022 | Addis Ababa | All Rights Reserve | Website Developed by <span>Tamers</span></label>
