Minor changes in inventory and upload pages

--- a/Ip project/Car-Sales/pages/upload.html
+++ b/Ip project/Car-Sales/pages/upload.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Car Information</title>
     <link rel="stylesheet" href="../asset/upload.css">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon" sizes="32x32">
 
     <!--google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,11 +30,11 @@
     <nav>
         <label id="h2">TAMERS</label>
         <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="inventory.html">INVENTORY</a></li>
-            <li><a href="#feature">FEATURED CARS</a></li>
+            <li><a href="../pages/carSales.html">HOME</a></li>
+            <li><a href="../pages/inventory.html">INVENTORY</a></li>
+            <li><a href="../pages/carSales.html#feature">FEATURED CARS</a></li>
             <li><a href="">UPLOAD</a></li>
-            <li><a href="#">CONTACT US</a></li>
+            <li><a href="../pages/contactus.html">CONTACT US</a></li>
         </ul>
     </nav>
     <fieldset>
@@ -97,7 +98,7 @@
         <label for="foot">Tamers | &copy; Copyright 2022 | Addis Ababa | All Rights Reserve | Website Developed by <span>Tamers</span></label>
     </footer>
 
-    <script src="/Ip project/Car-Sales/scripts/upload.js"></script>
+    <script src="../scripts/upload.js"></script>
     <script>
         var types = new Typed(".typed", {
             strings: ["Scroll Down And Fill The Form", "Fill All The Info"],
