modified:   Ip project/Car-Sales/asset/carSales.css 	modified:   Ip project/Car-Sales/asset/contactus.css 	modified:   Ip project/Car-Sales/pages/contactus.html 	modified:   Ip project/Car-Sales/pages/upload.html

--- a/Ip project/Car-Sales/pages/contactus.html
+++ b/Ip project/Car-Sales/pages/contactus.html
@@ -4,7 +4,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel = "stylesheet" type = "text/css" href = "../asset/contactus.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <link rel="stylesheet" href="../asset/detail.css">
         <link rel="icon" href="../images/favicon.ico" type="image/x-icon" sizes="32x32">
 
             <!--google fonts-->
@@ -21,9 +20,13 @@
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
-            <!--top of the website-->
+        <!-- the bar icon -->
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class='bx bx-menu'></i>
+        </label>
     <nav>
-        <h2>TAMERS</h2>
+        <label id="h2">TAMERS</label>
         <ul>
             <li><a href="./carSales.html">HOME</a></li>
             <li><a href="./inventory.html">INVENTORY</a></li>
