--- a/Ip project/Car-Sales/pages/upload.html
+++ b/Ip project/Car-Sales/pages/upload.html
@@ -29,11 +29,11 @@
     <nav>
         <label id="h2">TAMERS</label>
         <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="inventory.html">INVENTORY</a></li>
-            <li><a href="#feature">FEATURED CARS</a></li>
-            <li><a href="">UPLOAD</a></li>
-            <li><a href="#">CONTACT US</a></li>
+            <li><a href="../pages/carSales.html">HOME</a></li>
+            <li><a href="../pages/inventory.html">INVENTORY</a></li>
+            <li><a href="../pages/carSales.html/#feature">FEATURED CARS</a></li>
+            <li><a href="#">UPLOAD</a></li>
+            <li><a href="../pages/contactus.html">CONTACT US</a></li>
         </ul>
     </nav>
     <fieldset>
