modified:   Ip project/Car-Sales/asset/carSales.css 	modified:   Ip project/Car-Sales/asset/contactus.css 	modified:   Ip project/Car-Sales/asset/detail.css 	modified:   Ip project/Car-Sales/asset/inventory.css 	modified:   Ip project/Car-Sales/asset/upload.css 	modified:   Ip project/Car-Sales/pages/detail.htm 	modified:   Ip project/Car-Sales/pages/detail_2.htm 	modified:   Ip project/Car-Sales/pages/detail_3.htm 	modified:   Ip project/Car-Sales/pages/detail_4.htm 	modified:   Ip project/Car-Sales/pages/upload.html

--- a/Ip project/Car-Sales/pages/upload.html
+++ b/Ip project/Car-Sales/pages/upload.html
@@ -32,7 +32,7 @@
         <ul>
             <li><a href="../pages/carSales.html">HOME</a></li>
             <li><a href="../pages/inventory.html">INVENTORY</a></li>
-            <li><a href="../pages/carSales.html/#feature">FEATURED CARS</a></li>
+            <li><a href="../pages/carSales.html#feature">FEATURED CARS</a></li>
             <li><a href="#">UPLOAD</a></li>
             <li><a href="../pages/contactus.html">CONTACT US</a></li>
         </ul>
