--- a/Ip project/Car-Sales/pages/detail_4.htm
+++ b/Ip project/Car-Sales/pages/detail_4.htm
@@ -32,7 +32,7 @@
         <ul>
             <li><a href="carSale.html">HOME</a></li>
             <li><a href="inventory.html">INVENTORY</a></li>
-            <li><a href="carSales.html/#feature">FEATURED CARS</a></li>
+            <li><a href="carSales.html#feature">FEATURED CARS</a></li>
             <li><a href="../pages/upload.html">UPLOAD</a></li>
             <li><a href="#">CONTACT US</a></li>
         </ul>
