modified:   Ip project/Car-Sales/pages/detail.htm 	modified:   Ip project/Car-Sales/pages/detail_2.htm 	modified:   Ip project/Car-Sales/pages/detail_3.htm 	modified:   Ip project/Car-Sales/pages/detail_4.htm

--- a/Ip project/Car-Sales/pages/detail_2.htm
+++ b/Ip project/Car-Sales/pages/detail_2.htm
@@ -29,11 +29,11 @@
     <nav>
         <label id="h2">TAMERS</label>
         <ul>
-            <li><a href="carSale.html">HOME</a></li>
-            <li><a href="inventory.html">INVENTORY</a></li>
-            <li><a href="carSales.html#feature">FEATURED CARS</a></li>
+            <li><a href="../pages/carSales.html">HOME</a></li>
+            <li><a href="../pages/inventory.html">INVENTORY</a></li>
+            <li><a href="../pages/carSales.html#feature">FEATURED CARS</a></li>
             <li><a href="../pages/upload.html">UPLOAD</a></li>
-            <li><a href="#">CONTACT US</a></li>
+            <li><a href="../pages/contactus.html">CONTACT US</a></li>
         </ul>
     </nav>
 
