including content css file

--- a/Ip-II Projects/Udemy-clone/front-end/public/index.html
+++ b/Ip-II Projects/Udemy-clone/front-end/public/index.html
@@ -10,6 +10,8 @@
     <title>Udemy</title>
     <!-- css files -->
     <link rel="stylesheet" href="css/udemy.css">
+    <link rel="stylesheet" href="css/content.css">
+    
 
     <!-- google font -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
